# docs/apidocs_v1.yaml
@@ -76,6 +76,21 @@ paths:
       responses:
         "200":
           description: 로그인 성공
+  /api/v1/signup:
+    post:
+      tags:
+        - MyPage API
+      summary: 회원 가입
+      operationId: signUp
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SignUpRequest"
+      responses:
+        "200":
+          description: OK
   /api/v1/profile/{memberId}:
     get:
       tags:
@@ -205,6 +220,45 @@ components:
         updatedAt:
           type: string
           format: date-time
+        comments:
+          type: array
+          items:
+            $ref: "#/components/schemas/CommentResponse"
+    CommentResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        commenterId:
+          type: integer
+          format: int64
+        commenterNickname:
+          type: string
+        content:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+    PostCreateRequest:
+      type: object
+      required:
+        - content
+      properties:
+        content:
+          type: string
+        bgmUrl:
+          type: string
+        isSubscriberOnly:
+          type: integer
+        hashtags:
+          type: string
+    PostCreateResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
     LoginRequest:
       type: object
       properties:
@@ -212,6 +266,48 @@ components:
           type: string
         password:
           type: string
+    SignUpRequest:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+        nickname:
+          type: string
+        species:
+          type: string
+        sex:
+          type: string
+        birthDate:
+          type: string
+          format: date
+        intro:
+          type: string
+        profileImage:
+          type: string
+        address:
+          type: string
+        isAgreed:
+          type: boolean
+    SignUpResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        email:
+          type: string
+        status:
+          type: string
+        role:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        infoProvideAgreement:
+          type: string
+          format: date-time
     PaymentPrepareRequestDto:
       type: object
       required:
